--- a/labs/lab-06/ML_Lab6_SVM_DecisionTree.ipynb
+++ b/labs/lab-06/ML_Lab6_SVM_DecisionTree.ipynb
@@ -55,7 +55,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import LabelEncoder"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -732,7 +732,7 @@
         "df = pd.read_csv(dataset_url)\n",
         "df.head(10)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +899,7 @@
       "source": [
         "df = df.rename(columns = {\"vhigh\":\"buying\",\"vhigh.1\":\"maint\",\"2\":\"doors\",\"2.1\":\"persons\",\"small\":\"lug_boot\",\"low\":\"safety\",\"unacc\":\"acceptance\"}) "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -915,7 +915,7 @@
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1099,7 +1099,7 @@
         "mmin = {'more':5,'2':2,\"4\":4}\n",
         "df['persons'] = [mmin[i] for i in df['persons']]\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1115,7 +1115,7 @@
       "source": [
         "df.head(10)\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1294,7 +1294,7 @@
         "print(data_crosstab1.iloc[0])\n",
         "print(data_crosstab1.iloc[0][1])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1327,7 +1327,7 @@
         "df.drop('acceptance',axis='columns', inplace=True)\n",
         "X_train, X_test, y_train, y_test = train_test_split(df, y, test_size=0.2)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1353,7 +1353,7 @@
         "    \n",
         "print(\"Entropy of buying: \", entropy(df['buying']))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1397,61 +1397,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1i1fj9i3V0HM"
+        "id": "A8JEw810bbAO"
       },
       "source": [
-        "def train(X_train, X_test, y_train): \n",
-        "  \n",
-        "    # Decision tree with entropy \n",
-        "    clf_entropy = DecisionTreeClassifier( \n",
-        "            criterion = \"entropy\", \n",
-        "            random_state = 100, \n",
-        "            max_depth = 3, \n",
-        "            min_samples_leaf = 5\n",
-        "    ) \n",
-        "  \n",
-        "    # Performing training \n",
-        "    clf_entropy.fit(X_train, y_train) \n",
-        "    return clf_entropy  "
+        "# Training with Entropy for Decision Tree\n",
+        "clf_entropy = DecisionTreeClassifier( \n",
+        "        criterion = \"entropy\", \n",
+        "        random_state = 100, \n",
+        "        max_depth = 3, \n",
+        "        min_samples_leaf = 5\n",
+        ") \n",
+        "\n",
+        "clf = clf_entropy.fit(X_train, y_train) \n",
+        "    \n"
       ],
-      "execution_count": 17,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1HDULYehWHHR"
-      },
-      "source": [
-        "def predict(X_test, clf_object): \n",
-        "  \n",
-        "    # Predicton on test with giniIndex \n",
-        "    y_pred = clf_object.predict(X_test) \n",
-        "    print(\"Predicted values:\") \n",
-        "    print(y_pred) \n",
-        "    return y_pred "
-      ],
-      "execution_count": 18,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XwrlpUhBWLkb"
-      },
-      "source": [
-        "def accuracyScore(y_test, y_pred): \n",
-        "      \n",
-        "    print(\"Confusion Matrix: \", \n",
-        "        confusion_matrix(y_test, y_pred)) \n",
-        "      \n",
-        "    print (\"Accuracy : \", \n",
-        "    accuracy_score(y_test,y_pred)*100) \n",
-        "      \n",
-        "    print(\"Report : \", \n",
-        "    classification_report(y_test, y_pred)) "
-      ],
-      "execution_count": 19,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1461,17 +1421,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vGXjfqiWWTlx",
-        "outputId": "7f10d3f8-be0d-45b2-c643-385966078c03"
+        "outputId": "4a2eaf96-2bea-448e-d64a-1f8787960197"
       },
       "source": [
-        "# Invoke the triaining, and predict the results for the test\n",
-        "clf = train(X_train, X_test, y_train) \n",
-        "   \n",
         "print(\"Applying Entropy for prediction:\")\n",
-        "\n",
-        "pred_dt = predict(X_test, clf) \n"
+        "# Apply Predictin on CLF\n",
+        "pred_dt = clf.predict(X_test) \n",
+        "print(\"Predicted values:\") \n",
+        "print(pred_dt) \n",
+        " \n",
+        "\n"
       ],
-      "execution_count": 23,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1511,23 +1472,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x3F5rDSSWqOs",
-        "outputId": "7c2de5b2-2eb8-40a6-944a-cfcb3ba8765d"
+        "outputId": "5c7777f0-607b-4f82-beae-c4eef2a0df9e"
       },
       "source": [
         "# Perform accuracy testing\n",
-        "accuracyScore(y_test, pred_dt) "
+        "print(\"CM: \", confusion_matrix(y_test, y_pred))   \n",
+        "print(\"Classification Report: \", classification_report(y_test, y_pred)) \n",
+        "print(\"Accuracy: \",  accuracy_score(y_test,y_pred)) "
       ],
-      "execution_count": 24,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Confusion Matrix:  [[237   8   0   0]\n",
+            "CM:  [[237   8   0   0]\n",
             " [ 33  43   0   0]\n",
             " [  0   8   0   0]\n",
             " [  0  17   0   0]]\n",
-            "Accuracy :  80.92485549132948\n",
-            "Report :                precision    recall  f1-score   support\n",
+            "Classification Report:                precision    recall  f1-score   support\n",
             "\n",
             "           1       0.88      0.97      0.92       245\n",
             "           2       0.57      0.57      0.57        76\n",
@@ -1537,7 +1499,8 @@
             "    accuracy                           0.81       346\n",
             "   macro avg       0.36      0.38      0.37       346\n",
             "weighted avg       0.75      0.81      0.78       346\n",
-            "\n"
+            "\n",
+            "Accuracy:  0.8092485549132948\n"
           ],
           "name": "stdout"
         },
@@ -1586,7 +1549,7 @@
         "print(metrics.classification_report(y_test, pred_knn))\n",
         "print(metrics.confusion_matrix(y_test, pred_knn))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1646,7 +1609,7 @@
         "print(metrics.classification_report(y_test, pred_log))\n",
         "print(metrics.confusion_matrix(y_test, pred_log))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1717,7 +1680,7 @@
       "source": [
         "print(\" Decision Tree \\t : \",accuracy_score(y_test,pred_dt), \"\\n Knn \\t \\t: \",accuracy_score(y_test,pred_knn),\"\\n Log Reg \\t\\t: \",accuracy_score(y_test,pred_log))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
